--- a/.github/workflows/auto-recipe-update.yml
+++ b/.github/workflows/auto-recipe-update.yml
@@ -1,10 +1,8 @@
 name: auto-recipe-update
-
 on:
   schedule:
     - cron: '0 1 * * 2-5'
   workflow_dispatch:
-
 jobs:
   update:
     name: Recipe Update
@@ -18,31 +16,35 @@ jobs:
           python3-jinja2 xterm python3-subunit zstd liblz4-tool
           git config --global user.name aws-iot-embedded-linux-ci
           git config --global user.email aws-iot-embedded-linux-ci@users.noreply.github.com
-          git clone git://git.yoctoproject.org/poky -b  master
-          git clone https://github.com/openembedded/meta-openembedded.git -b master
+          git clone git://git.yoctoproject.org/poky -b ${{ github.ref_name }}
+          git clone https://github.com/openembedded/meta-openembedded.git -b ${{ github.ref_name }}
       - name: Clone Our Layer
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
-          ref: master-next
+          ref: ${{ github.ref_name }}-next
           path: meta-aws
           fetch-depth: 0
       - name: Clone CI Tolls Repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           path: ci
           repository: 'aws4embeddedlinux/meta-aws-ci'
+          ref: master
       - name: Install Helper Tool
         run: |
           pip install ci/auto-upgrader
       - name: Run Update
         run: |
           source poky/oe-init-build-env build
+          git -C ../poky status
+          git -C ../meta-openembedded/ status
+          git -C ../meta-aws/ status
           bitbake-layers add-layer ../meta-openembedded/meta-oe
           bitbake-layers add-layer ../meta-openembedded/meta-python
           bitbake-layers add-layer ../meta-openembedded/meta-multimedia
           bitbake-layers add-layer ../meta-openembedded/meta-networking
           bitbake-layers add-layer ../meta-aws
-          upgrader update --layer-path ../meta-aws
+          upgrader update --layer-path ../meta-aws --target-branch=${{ github.ref_name }}-next
       - name: Push Result
         working-directory: meta-aws
         run: |
@@ -52,9 +54,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_CREDENTIAL }}
         run: |
-          upgrader create-pulls --branch-file=../build/branches.txt --repo=${{ github.repository }} --target-branch="master-next" --delay 300
+          upgrader create-pulls --branch-file=../build/branches.txt --repo=${{ github.repository }} --target-branch=${{ github.ref_name }}-next --delay 300
       - name: Publish Artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: updated-recipes
           path: |
