greengrass-lite.yaml: add platformOverride
(cherry picked from commit 839ce5ca1e3c92e00f97266cbbae8398b6131f58)

--- a/recipes-iot/aws-iot-greengrass/greengrass-lite/greengrass-lite.yaml
+++ b/recipes-iot/aws-iot-greengrass/greengrass-lite/greengrass-lite.yaml
@@ -8,3 +8,4 @@ services:
       runWithDefault:
         posixUser: "@GG_USER@:@GG_GROUP@"
       greengrassDataPlanePort: "8443"
+      platformOverride: {}
