Add greengrass-lite with necessary libraries
They are enabled with
ENABLE_GREENGRASS_LITE_MIXINS = "1"

This is necessary to enable if you are using greengrass-lite, as greengrass lite require a recent version of
cmake, openssl, curl

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -5,7 +5,7 @@ BBPATH .= ":${LAYERDIR}"
 # We have recipes-* directories, add to BBFILES
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
             ${LAYERDIR}/recipes-*/*/*.bbappend"
-BBFILES += "${@bb.utils.contains("GG_KERNEL_MOD", "Y", "${LAYERDIR}/recipes-*/*/base/*.bbappend", "", d)}" 
+BBFILES += "${@bb.utils.contains("GG_KERNEL_MOD", "Y", "${LAYERDIR}/recipes-*/*/base/*.bbappend", "", d)}"
 
 BBFILE_COLLECTIONS += "meta-aws"
 BBFILE_PATTERN_meta-aws = "^${LAYERDIR}/"
@@ -18,3 +18,12 @@ LAYERDEPENDS_meta-aws += "meta-python"
 
 LAYERSERIES_COMPAT_meta-aws = "honister"
 
+# This is necessary to enable if you are using greengrass-lite, as greengrass lite require a recent version of
+# cmake, openssl, curl
+# ENABLE_GREENGRASS_LITE_MIXINS = "1"
+BBFILES_DYNAMIC += "\
+    ${@bb.utils.contains("ENABLE_GREENGRASS_LITE_MIXINS", "1", " \
+    core:${LAYERDIR}/dynamic-layers/mixin-cmake_curl_openssl-layer/*/*/*.bb \
+    core:${LAYERDIR}/dynamic-layers/mixin-cmake_curl_openssl-layer/*/*/*.bbappend \
+    ", "", d)} \
+"
